<resources>
    <string name="app_name">AbsolverDatabase</string>
    <string name="copy">复制</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="learn">教学</string>
    <string name="data">数据</string>
    <string name="deck">卡组</string>
    <string name="setting">设置</string>
    <string name="label_learnFragment">教学</string>
    <string name="label_dataFragment">数据</string>
    <string name="label_deckFragment">卡组</string>
    <string name="label_deckEditFragment">卡组编辑</string>
    <string name="label_moveSelectFragment">招式选择</string>
    <string name="label_settingFragment">设置</string>
    <string name="label_baseSettingFragment">基础设置</string>
    <string name="label_advanceSettingFragment">高级设置</string>
    <string name="label_settingDatabaseFragment">数据库相关</string>
    <string name="label_settingDevFragment">开发工具</string>
    <string name="label_settingLicenseFragment">开源库</string>
    <string name="press_one_more_time_for_finish">再按一次退出</string>
    <string name="item_learn_author">up: %1$s</string>
    <string name="item_learn_videoMsg">播放量: %1$d · %2$s</string>
    <string name="dateFormat_for_videoAdapter">MM月dd日</string>
    <string name="choice_video">选择视频</string>
    <string name="ghost_teach">老G教学</string>
    <string name="latest_video">最新视频</string>
    <string name="network_request_error">网络请求错误:%1$s</string>
    <string name="tab_map">地图</string>
    <string name="tab_palette">调色板</string>
    <string name="tab_tip">Tip</string>
    <string name="tab_other">其他</string>
    <string name="todo_text">我还不知道在这放什么；\n如果你有好的想法，可联系我</string>
    <string name="attack_detail">攻击细节</string>
    <string name="style_in_CE_detail">流派技</string>
    <string name="bare_handed">徒手</string>
    <string name="glove">拳套</string>
    <string name="sword">剑</string>
    <string name="has_copy_deck_code">已复制卡组代码</string>
    <string name="share_deck">分享卡组</string>
    <string name="need_to_import_deck_from_clip">需要导入复制的卡组吗</string>
    <string name="clipboard_is_empty">剪贴板为空</string>
    <string name="error_deck_data">错误的卡组代码</string>
    <string name="save_deck_by_shared_false">保存分享的卡组失败 %1$s</string>
    <string name="dateFormat_for_deckAdapter">MM月dd日 HH时mm分ss秒</string>
    <string name="item_deck_aboutTime">更新时间:%1$s</string>
    <string name="how_to_edit_deckMsg_title">如何编辑卡组信息</string>
    <string name="how_To_edit_deckMsg_msg">长按空白区域可打开编辑界面弹窗;长按招式框格可以删除对应招式(招式选择界面也一样)</string>
    <string name="save_deck_success">成功保存ID为%1$s的卡组</string>
    <string name="move_msg_bar_advantageFrame">+%1$d/%2$s&#160;</string>
    <string name="move_msg_bar_startFrame">%1$d帧</string>
    <string name="save_deck_dialog_title">提示</string>
    <string name="save_deck_dialog_msg">卡组已经改变，退出前需要保存吗</string>
    <string name="deck_name">卡组名称</string>
    <string name="deck_note">卡组说明</string>
    <string name="deckDetail_createTime">创建时间:\n%1$s</string>
    <string name="deckDetail_updateTime">更新时间:\n%1$s</string>
    <string name="how_to_use_moveSelect_title">招式选择使用指南</string>
    <string name="how_to_use_moveSelect_msg">
        1. 顶部为招式序列，长按序列内招式可将其删除\n
        2. 点击招式即进入选中框的编辑状态\n
        3. 中间部分为招式数据和初级筛选项，侧滑数据那栏可以打开高级筛选弹窗\n
        4. 底部为招式列表，按结束站架区分，若已使用则在图片左上角有图标或边框提示(应用不处理重复选中的情况，标记样式可在高级设置中切换)\n
        5. 如果进入招式选择界面顶部序列没有招式(本应存在招式)，请重新进入此界面即可，此BUG仍在寻找中
    </string>
    <string name="strength_light">轻</string>
    <string name="strength_mid">中</string>
    <string name="strength_heavy">重</string>
    <string name="attackToward_left">左</string>
    <string name="attackToward_right">右</string>
    <string name="attackToward_all">左右均可</string>
    <string name="attackAltitude_low">低</string>
    <string name="attackAltitude_middle">中</string>
    <string name="attackAltitude_height">高</string>
    <string name="attackAltitude_all">全部高度</string>
    <string name="altitude">位</string>
    <string name="attackDirection_horizontal">横向</string>
    <string name="attackDirection_vertical">纵向</string>
    <string name="attackDirection_thrust">戳击</string>
    <string name="attackDirection_all">全部走向</string>
    <string name="moveEffect_stop">停止</string>
    <string name="moveEffect_dodge_up">上闪</string>
    <string name="moveEffect_dodge_low">下闪</string>
    <string name="moveEffect_dodge_side">侧闪</string>
    <string name="moveEffect_break_defences">破防</string>
    <string name="moveEffect_super_armor">霸体</string>
    <string name="moveEffect_block_counter">格挡反击</string>
    <string name="moveEffect_double_attack">二段</string>
    <string name="moveEffect_triple_attack">三段</string>
    <string name="moveEffect_mid_line">中线</string>
    <string name="moveEffect_mental_blow">精神打击</string>
    <string name="moveEffect_null">无效果</string>
    <string name="moveEffect_error">Error</string>
    <string name="moveMsg_strength">力度:%1$s</string>
    <string name="moveMsg_range">范围:%1$1.2f</string>
    <string name="moveMsg_effect">特效:%1$s</string>
    <string name="moveMsg_startFrame">起手帧数:%1$d</string>
    <string name="moveMsg_phyOutput">耗体:%1$1.2f</string>
    <string name="moveMsg_phyWeakness">削体:%1$1.2f</string>
    <string name="moveMsg_hitAdvantage">命中优势帧:%1$d</string>
    <string name="moveMsg_defenseAdvantage">防御优势帧:%1$d</string>
    <string name="moveCEMsg_strengthBonus">力量:%1$s</string>
    <string name="moveCEMsg_agilityBonus">敏捷:%1$s</string>
    <string name="moveCEMsg_flexibleBonus">机动:%1$s</string>
    <string name="moveCEMsg_cancelPoint">取消点:%1$d</string>
    <string name="moveCEMsg_hitFrame">打击帧:%1$s</string>
    <string name="moveCEMsg_yellowAttackFrame">黄攻帧:%1$d</string>
    <string name="movesFilter_strength">力度</string>
    <string name="movesFilter_range">范围</string>
    <string name="movesFilter_effect">特效</string>
    <string name="movesFilter_selectAll">全选</string>
    <string name="movesFilter_clearAll">清空</string>
    <string name="movesFilter_startFrame">起手帧数</string>
    <string name="movesFilter_phyWeakness">削体</string>
    <string name="movesFilter_phyOutput">耗体</string>
    <string name="movesFilter_hitAdvantage">命中优势帧</string>
    <string name="movesFilter_defAdvantage">防御优势帧</string>
    <string name="config_setting">可配置项</string>
    <string name="base_setting">基础设置</string>
    <string name="use_toolbar">显示工具栏</string>
    <string name="dialogGaussianBlur">高斯模糊</string>
    <string name="ask_before_import">在导入卡组前弹窗</string>
    <string name="show_seq_detail_when_shared_deck">分享卡组时附带招式名称</string>
    <string name="use_shareSheet_when_shared_deck">分享时使用Android ShareSheet</string>
    <string name="show_movesMsg_in_deckEdit">卡组编辑界面显示简单招式属性</string>
    <string name="frame">帧数</string>
    <string name="trend">走向</string>
    <string name="auto_save_deck">退出卡组编辑界面时自动保存卡组</string>
    <string name="move_mod_select">招式数据模式选择</string>
    <string name="origin_mod">原版</string>
    <string name="ce_mod">China Edition Mod</string>
    <string name="show_more_moveCE_info">显示CN招式更多数据</string>
    <string name="night_mod">夜间模式</string>
    <string name="nightMode_yes">启用</string>
    <string name="nightMode_follow_system">跟随系统</string>
    <string name="advance_filter">高级筛选</string>
    <string name="moveItems_in_row">招式数量(一行)</string>
    <string name="which_UsedMove_tag">已使用招式标记样式</string>
    <string name="usedMoveTag_img">√号图标</string>
    <string name="usedMoveTag_shape">边框</string>
    <string name="useShapeTag_tip">注意：使用边框样式会使格子加载变慢，可能会导致页面切换时稍有卡顿</string>
    <string name="use_vibrate">使用震动</string>
    <string name="vibrate_time">震动时间/毫秒</string>
    <string name="vibrate_strength">震动强度</string>
    <string name="choose_theme">主题选择</string>
    <string name="theme_default">默认</string>
    <string name="theme_wallpaper">壁纸动态</string>
    <string name="theme_red">枫叶红</string>
    <string name="theme_gold">鎏金</string>
    <string name="theme_blue">满天星紫</string>
    <string name="theme_green">油绿</string>
    <string name="choose_language">语言选择</string>
    <string name="language_zh">中文</string>
    <string name="language_en">English</string>
    <string name="restart_app_in_time">一秒后重启应用</string>
    <string name="advance_setting">高级设置</string>
    <string name="develop_util">开发工具</string>
    <string name="save_file_when_crash">收集崩溃日志</string>
    <string name="crash_file_path">崩溃日志路径</string>
    <string name="crash_files_msg">崩溃日志数量:%1$d,共%2$s</string>
    <string name="clear_files">清理</string>
    <string name="clear_files_false">删除失败</string>
    <string name="log_level_print">日志打印等级</string>
    <string name="log_level_write">日志写入等级</string>
    <string name="log_file_path">日志文件路径</string>
    <string name="log_files_msg">日志数量:%1$d,共%2$s</string>
    <string name="about_database">数据库相关</string>
    <string name="sync_moveDatabase_from_local">同步原版招式数据</string>
    <string name="sync_moveCEDatabase_from_local">本地代码同步CN招式数据</string>
    <string name="sync_moveCEDatabase_from_webView">使用WebView同步CN招式数据</string>
    <string name="sync_with_webView">使用WebView同步</string>
    <string name="on_sync_ing_data">同步数据中</string>
    <string name="sync_error">同步失败</string>
    <string name="html_data_is_null">获取的HTML数据为空</string>
    <string name="sync_success_and_cost_time">同步成功,耗时:%1$s秒</string>
    <string name="sync_finish">同步完成</string>
    <string name="shake_click">点击过于频繁</string>
    <string name="about_app">关于</string>
    <string name="author">开发者:graveyard233</string>
    <string name="repositoryText">项目地址</string>
    <string name="repositoryUrl">https://github.com/graveyard233/AbsolverDatabase</string>
    <string name="repositoryVersion">https://github.com/graveyard233/AbsolverDatabase/commits/dev</string>
    <string name="version">版本:%1$s</string>
    <string name="support_author">如果觉得软件还不错，可以进Github给项目一个STAR</string>
    <string name="feedback">反馈</string>
    <string name="feedback_snackbar_content">Issue,Pull request或邮箱:%1$s</string>
    <string name="how_to_use_title">使用说明</string>
    <string name="how_to_use_positive">我真的明白如何使用了</string>
    <string name="how_to_use_content">
        # 总览\n
        本应用是为赦免者玩家打造的现代化Android应用，可在Android 10及以上的版本运行，提供对卡组进行增删改查，浏览与筛选招式等功能\n
        主要采用Material 3规范设计，UI参考了Ghost的卡组编辑器；提供动态颜色获取和多种主题色切换；适配夜间与横屏模式\n
        底部菜单导航栏分为教学模块，数据模块，卡组模块和设置模块。本说明文档将以模块分别讲解\n
        ## 教学模块\n
        - 默认浏览Ghost新手教学视频，点击顶部图片弹出弹窗，可切换列表。另一列表展示B站最新的赦免者相关视频，默认加载20个\n
        ## 数据模块\n
        - 默认展示地图界面，可放大缩小查看\n
        - 调色板界面根据手机壁纸展示Material动态主题色\n
        - Tip界面展示游戏的一些数据\n
        ## 卡组模块\n
        ### 卡组浏览界面\n
        - 右侧按类别(徒手，拳套，剑)筛选数据库中的卡组，左侧列表展示此类卡组(按卡组更新时间降序排列)\n
        - 点击卡组可进入卡组编辑界面\n
        - 长按卡组可复制卡组代码(和炉石卡组代码用法类似)\n
        - 点击顶部图标可新建卡组\n
        - 长按顶部图标可根据剪贴板内的代码复制卡组\n
        - 侧滑卡组子项，点击(X)可以删除卡组\n
        ### 卡组编辑界面\n
        - 本界面一切操作，不主动保存的话，不会写入数据库\n
        - 长按招式框可删除框内招式(临时)\n
        - 点击保存图标可以保存本次编辑(无法回滚)\n
        - 点击招式图标可进入招式选择界面\n
        - 长按空白区域可唤起底部弹窗，用于编辑卡组名等\n
        ### 招式选择界面\n
        - 顶部为招式序列，长按序列内招式可将其删除\n
        - 点击招式即进入选中框的编辑状态\n
        - 中间部分为招式数据和初级筛选项，侧滑数据那栏可以打开高级筛选弹窗\n
        - 底部为招式列表，按结束站架区分，若已使用则在图片左上角有图标提示(应用不处理重复选中的情况)\n
        ## 设置模块\n
        - 可用于了解项目仓库，应用版本和提交建议的方式\n
        ### 基础设置界面\n
        - 设置应用各种基础配置，动态主题色仅在Android12及以上可用\n
        - 如果觉得顶部的工具栏很难看，可以关闭[显示工具栏]，其仅提供导航功能\n
        - 点击高级设置可进入高级设置界面\n
        - 不推荐打开CN的更多数据展示开关，因为打开后会计算并调整UI，会造成更加明显的卡顿现象\n
        ### 高级设置界面\n
        - 高斯模糊功能仅在Android12及以上可用\n
        - 高级筛选可开启或停用高级筛选项，长按可拖动顺序，按从左到右，从上到下排序\n
        ### 数据库相关界面\n
        - 除云端同步CN方法外，都是本地代码更新招式数据\n
        - 云端同步CN数据是通过webView分析网页的方式获取数据，有失败的风险\n
        ### 开发工具界面\n
        - 用于调整日志打印，写入等级，控制崩溃日志的界面\n
    </string>
    <string name="thanks_title">致谢</string>
    <string name="thanks_content">感谢Ghost对卡组筛选逻辑的讲解，原版数据表格及编辑器原型设计支持。\n感谢China Edition制作组提供CNMod的招式数据与图片，APP矢量图标文件。
感谢赦免者国服QQ群的玩家给予APP测试的反馈支持。\n感谢第三方开源库与包括但不限于github，掘金，wanandroid，stackoverflow，简书，CSDN上博客对本应用的架构与设计指导。
感谢iconfont网站的矢量图标支持；感谢在线格式转换网站将jpg，png转svg，才得以制作流派与站架图标。</string>
</resources>