<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="?textAppearanceTitleMedium"
            android:text="@string/movesFilter_effect"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/dialog_movesFilter_effect_chip_selectAll"
            style="@style/Widget.Material3.Chip.Assist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/movesFilter_selectAll"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/dialog_movesFilter_effect_chip_clearAll"
            style="@style/Widget.Material3.Chip.Assist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movesFilter_clearAll"/>
    </LinearLayout>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/dialog_movesFilter_effect_chipGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:chipSpacingHorizontal="12dp">

        <com.google.android.material.chip.Chip
            android:id="@+id/dialog_movesFilter_effect_chip_stop"
            style="@style/Widget.Material3.Chip.Filter.Elevated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moveEffect_stop"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/dialog_movesFilter_effect_chip_dodge_up"
            style="@style/Widget.Material3.Chip.Filter.Elevated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moveEffect_dodge_up"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/dialog_movesFilter_effect_chip_dodge_low"
            style="@style/Widget.Material3.Chip.Filter.Elevated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moveEffect_dodge_low"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/dialog_movesFilter_effect_chip_dodge_side"
            style="@style/Widget.Material3.Chip.Filter.Elevated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moveEffect_dodge_side"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/dialog_movesFilter_effect_chip_break_defences"
            style="@style/Widget.Material3.Chip.Filter.Elevated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moveEffect_break_defences"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/dialog_movesFilter_effect_chip_super_armor"
            style="@style/Widget.Material3.Chip.Filter.Elevated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moveEffect_super_armor"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/dialog_movesFilter_effect_chip_block_counter"
            style="@style/Widget.Material3.Chip.Filter.Elevated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moveEffect_block_counter"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/dialog_movesFilter_effect_chip_double_attack"
            style="@style/Widget.Material3.Chip.Filter.Elevated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moveEffect_double_attack"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/dialog_movesFilter_effect_chip_triple_attack"
            android:visibility="gone"
            style="@style/Widget.Material3.Chip.Filter.Elevated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moveEffect_triple_attack"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/dialog_movesFilter_effect_chip_mid_line"
            style="@style/Widget.Material3.Chip.Filter.Elevated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moveEffect_mid_line"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/dialog_movesFilter_effect_chip_mental_blow"
            style="@style/Widget.Material3.Chip.Filter.Elevated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moveEffect_mental_blow"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/dialog_movesFilter_effect_chip_null"
            style="@style/Widget.Material3.Chip.Filter.Elevated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moveEffect_null"/>
    </com.google.android.material.chip.ChipGroup>

</LinearLayout>