<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:textAppearance="?textAppearanceTitleMedium"
        android:gravity="center_vertical"
        android:text="@string/movesFilter_strength"/>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/dialog_movesFilter_strength_checkBox_light"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/strength_light"/>
    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/dialog_movesFilter_strength_checkBox_mid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/strength_mid"/>
    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/dialog_movesFilter_strength_checkBox_heavy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strength_heavy"/>

</LinearLayout>