<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_setting"
    app:startDestination="@id/settingFragment">

    <fragment
        android:id="@+id/settingFragment"
        android:name="com.lyd.absolverdatabase.ui.page.SettingFragment"
        android:label="@string/label_settingFragment"
        tools:layout="@layout/fragment_setting">
        <action
            android:id="@+id/action_settingFragment_to_settingConfigFragment"
            app:destination="@id/settingBaseFragment" />
        <action
            android:id="@+id/action_settingFragment_to_settingDatabaseFragment"
            app:destination="@id/settingDatabaseFragment" />
        <action
            android:id="@+id/action_settingFragment_to_settingLicenseFragment"
            app:destination="@id/settingLicenseFragment"
            app:enterAnim="@anim/slide_enter_to_left"
            app:exitAnim="@anim/slide_out_to_right"
            app:popEnterAnim="@anim/slide_enter_to_left"
            app:popExitAnim="@anim/slide_out_to_right" />
        <action
            android:id="@+id/action_settingFragment_to_settingDevFragment"
            app:destination="@id/settingDevFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingBaseFragment"
        android:name="com.lyd.absolverdatabase.ui.page.SettingBaseFragment"
        android:label="@string/label_baseSettingFragment"
        tools:layout="@layout/fragment_setting_base">
        <action
            android:id="@+id/action_settingBaseFragment_to_settingAdvanceFragment"
            app:destination="@id/settingAdvanceFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingAdvanceFragment"
        android:name="com.lyd.absolverdatabase.ui.page.SettingAdvanceFragment"
        android:label="@string/advance_setting"
        tools:layout="@layout/fragment_setting_advance"/>
    <fragment
        android:id="@+id/settingDatabaseFragment"
        android:name="com.lyd.absolverdatabase.ui.page.SettingDatabaseFragment"
        android:label="@string/label_settingDatabaseFragment"
        tools:layout="@layout/fragment_setting_database"/>
    <fragment
        android:id="@+id/settingLicenseFragment"
        android:name="com.lyd.absolverdatabase.ui.page.SettingLicenseFragment"
        android:label="@string/label_settingLicenseFragment"
        tools:layout="@layout/fragment_setting_license"/>
    <fragment
        android:id="@+id/settingDevFragment"
        android:name="com.lyd.absolverdatabase.ui.page.SettingDevFragment"
        android:label="@string/label_settingDevFragment"
        tools:layout="@layout/fragment_dev" />

</navigation>