<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.lyd.absolverdatabase.bridge.state.SettingState" />
        <variable
            name="click"
            type="com.lyd.absolverdatabase.ui.page.SettingFragment.ClickProxy" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/setting_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical"
                    >


                    <TextView
                        android:id="@+id/setting_title_config"
                        style="@style/SettingFragmentTitleText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/config_setting"
                        app:drawableStartCompat="@drawable/ic_config"
                        android:clickable="true"
                        android:background="?selectableItemBackground"/>

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:background="@color/grey_split_line" />

                    <TextView
                        android:id="@+id/setting_title_database"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/about_database"
                        style="@style/SettingFragmentTitleText"
                        app:drawableStartCompat="@drawable/ic_database"
                        android:clickable="true"
                        android:background="?selectableItemBackground"/>

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:background="@color/grey_split_line" />

                    <TextView
                        android:id="@+id/setting_title_dev"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/develop_util"
                        style="@style/SettingFragmentTitleText"
                        app:drawableStartCompat="@drawable/ic_dev"
                        android:clickable="true"
                        android:background="?selectableItemBackground"/>

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:background="@color/grey_split_line" />

                    <TextView
                        android:id="@+id/setting_title_about"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/about_app"
                        style="@style/SettingFragmentTitleText"
                        app:drawableStartCompat="@drawable/ic_about"
                        android:clickable="true"
                        android:background="?selectableItemBackground"/>

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:background="@color/grey_split_line" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/author"
                        style="@style/SettingFragmentItemText"
                        app:drawableStartCompat="@drawable/ic_code"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/repositoryText"
                        android:hint="@string/repositoryUrl"
                        style="@style/SettingFragmentItemText"
                        app:drawableStartCompat="@drawable/ic_github"
                        android:onClick="@{(theVeiw)->click.openWeb(theVeiw)}"/>

                    <TextView
                        android:id="@+id/setting_about_version"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/version"
                        android:hint="@string/repositoryVersion"
                        style="@style/SettingFragmentItemText"
                        app:drawableStartCompat="@drawable/ic_version"
                        android:onClick="@{(theVeiw)->click.openWeb(theVeiw)}"/>

                    <TextView
                        android:id="@+id/setting_item_thanks"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/support_author"
                        style="@style/SettingFragmentItemText"
                        app:drawableStartCompat="@drawable/ic_start"/>

                    <TextView
                        android:id="@+id/setting_item_feedback"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/feedback"
                        style="@style/SettingFragmentItemText"
                        app:drawableStartCompat="@drawable/ic_email"/>

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>